Update aboutus.css fixed overflow issue due to gmail and non responsive skill horizontal bar

--- a/assests/css/aboutus.css
+++ b/assests/css/aboutus.css
@@ -501,7 +501,7 @@ li {
 
 .adjustHiermeSize {
     display: flex;
-    max-width: 70vw;
+    max-width: auto;
     min-width: auto;
     /* flex-wrap: wrap; */
 }
@@ -706,14 +706,20 @@ li {
 
 .longprogBarGrid {
     display: grid;
-    width: 68%;
+    width: 100%;
     justify-content: center;
     place-items: center;
-    margin: 10px 15px;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    grid-template-rows: auto;
+    /* margin: 10px 15px; */
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
-    margin: 10px 30px 40px 30px;
+    /* margin: 10px 30px 40px 30px; */
+}
+
+@media (max-width: 720px) {
+    .longprogBarGrid {
+        display: flex !important;
+        flex-direction: column !important;
+    }
 }
 
 .longprogBar {
